# FastApi_template

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  runServer.py
backend/: api.py  database.py  mongodb.py  runServer.py
backend/mongoDb/: __init__.py  models.py  mongodb.py
